# pmddt-kelompok-2

models/: k-means.ipynb  nb-clustering.ipynb  nb-kebersihan.ipynb  nb-linen.ipynb  nb-service.ipynb  preprocessing.ipynb  test-data-web.ipynb
models/datasets/: Traveloka-id application rating and review dataset.csv  clean_dataset.csv  hotel-review.csv  kebersihan-negative.csv  kebersihan-positive.csv  (+4 more)
sentimenter/: .env.example  pyproject.toml
sentimenter/sentimenter/: __init__.py  __main__.py  db.py
sentimenter/sentimenter/routes/: dashboard.py
sentimenter/sentimenter/templates/: layout.html
sentimenter/sentimenter/templates/dashboard/: batch.html  index.html
web-sentimenter/: .env.example  README.md  pyproject.toml
web-sentimenter/main/: app.py
web-sentimenter/main/data/: review_only.csv  test_65.csv
web-sentimenter/main/ml_model/: nb_classifier_kebersihan.pkl  nb_classifier_linen.pkl  nb_classifier_service.pkl  nb_cluster.pkl  tfidf_cluster_model.pkl  tfidf_kebersihan_model.pkl  tfidf_linen_model.pkl  tfidf_service_model.pkl
web-sentimenter/main/model/: nb_cluster.py  nb_kebersihan.py  nb_linen.py  nb_service.py  preprocessing.py
web-sentimenter/main/static/css/: style.css
web-sentimenter/main/templates/auth/: login.html  register.html
web-sentimenter/main/templates/components/: toast.html
web-sentimenter/main/templates/dashboard/: multi.html  single.html
web-sentimenter/main/templates/layouts/: index.html
web-sentimenter/main/templates/predict/: result_csv.html  result_single.html
web-sentimenter/main/uploads/: traveloka_review.csv
(+13 files in other folders)
