[tool.poetry]
name = "web-sentimenter"
version = "0.1.0"
description = ""
authors = ["trisnawahyudiii <wayantrisna79@gmail.com>"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
